apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: radarr
          persistentVolumeClaim:
            claimName: radarr
        - name: movies
          hostPath:
            path: /mnt/nas/Movies
        - name: shows
          hostPath:
            path: /mnt/nas/Shows
        - name: qb-downloads
          hostPath:
            path: /mnt/nas/qBittorrent
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: radarr
              mountPath: /config
            - name: movies
              mountPath: /mnt/nas/Movies
            - name: shows
              mountPath: /mnt/nas/Shows
            - name: qb-downloads
              mountPath: /mnt/nas/qBittorrent
